# auto-dbhc

./: Dockerfile  README.md  TODO.md  data_extractor.py  dbhc_dr_collector.sh  dbhc_master_collector.sh  dbhc_prod_collector.sh  docker-compose.yml  generate_reports.bat  generate_reports.sh  mock_setup.sh  pyproject.toml
20260205_healthcheck_19C/NODE1/: FS.txt  crs.txt  lstnr.txt  top.txt
data-collector/: README.md  TODO.md  data-collect.sh  docker-compose.yml  mock_setup.sh
db_health_data_collector/: dbhc_dr_collect.sh  hc_all_nodes.sql  hc_global_reports.sql  hc_specific_nodes.sql
db_health_data_generator/: dbhc_dr_gen.sh  dbhc_prod_gen.sh  hc_queries.sql
dbhc_data_collector/: dbhc_prod_collect.sh  hc_all_nodes.sql  hc_specific_nodes.sql
dbhc_manual/: template_findings.yml
dbhc_report_qmd/: _core_content.qmd  _metadata.qmd  html_generator.qmd  pdf_generator.qmd
dr_collector/: go.mod
prod_collector/: hc_global_reports.sql  main.go
report-generator/: .env.local  .gitattributes  Dockerfile  LICENSE  README.md  data_extractor.py  dbhc_onedrive  generate_reports.sh  pyproject.toml  requirements.txt
report-generator/dbhc_manual/: template_findings.yml
report-generator/dbhc_manual/20260112/: findings.yml
report-generator/dbhc_report_qmd/: _backup.qmd  _core_content.qmd  _metadata.qmd  pdf_generator.qmd  styles.css
report-generator/dbhc_reports/20260112/: dbhc_report.html
report-generator/dbhc_reports/20260206/: dbhc_report.html
server_scripts/: dbhc_dr_collector.sh  dbhc_prod_collector.sh  generate_awrrpt.sql  get_snaps.sql  hc_specific_nodes.sql
(+15 files in other folders)
